setup the Email configuration.

--- a/award/templates/all-awards/base.html
+++ b/award/templates/all-awards/base.html
@@ -30,7 +30,12 @@
     {% include "navbar.html" %}
 
     <hr>
-    {% block content %}<h1 style="text-align: center;font-family:'Butcherman';font-size: 52px ;">The Awwwards </h1>  {%endblock%}
+    {% block content %}
+    
+    <h1 style="text-align: center;font-family:'Butcherman';font-size: 52px ;">The Awwwards </h1> 
+    
+
+    {%endblock%}
 
 
     {% block scripts %}
