made changes in the registration folder

--- a/award/templates/all-awards/base.html
+++ b/award/templates/all-awards/base.html
@@ -31,10 +31,9 @@
 
     <hr>
     {% block content %}
-    
+    <div class="header">
     <h1 style="text-align: center;font-family:'Butcherman';font-size: 52px ;">The Awwwards </h1> 
-    
-
+  </div>
     {%endblock%}
 
 
