made changes in the main html

--- a/award/templates/all-awards/base.html
+++ b/award/templates/all-awards/base.html
@@ -34,6 +34,11 @@
     <div class="header">
     <h1 style="text-align: center;font-family:'Butcherman';font-size: 52px ;">The Awwwards </h1> 
   </div>
+
+
+	</div>
+</div>
+
     {%endblock%}
 
 
