--- a/award/templates/all-awards/main.html
+++ b/award/templates/all-awards/main.html
@@ -1,27 +1,28 @@
-{%extends 'all-awards/base.html'%}
+{% extends 'all-awards/base.html' %}
+{% load bootstrap4 %}
+{% load static %}
+{% load staticfiles %}
+
+{% block styles%}
+{% bootstrap_css %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<link rel="stylesheet" href="{% static 'css/baseaward.css' %}">
+{%endblock %}
 
 {% block content %}
-{{block.super}}
 
-<div class="container">
+    
 
-    <!-- Looping through news   -->
-    {% for award_item in award %}
-  
-    <div class="row">
-      <!-- displaying News articles -->
-      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        <h2 class="text-center"> {{ award_item.title }} </h2>
-      </div>
-    <!--Display news Article images  -->
-    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        <img src="{{award_item.profile_picture.url}}" class="img-responsive" alt="Image">
-      </div>
-    </div>
-  
-    {% empty %}
-   
-    {% endfor %}
-  
-  </div>
+
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"> </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.1.3/circle-progress.min.js"></script>
+
+
+
 {% endblock %}
