--- a/award/templates/all-awards/main.html
+++ b/award/templates/all-awards/main.html
@@ -5,15 +5,24 @@
 
 {% block styles%}
 {% bootstrap_css %}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css"
+  integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <link rel="stylesheet" href="{% static 'css/baseaward.css' %}">
+
+<link href='https://fonts.googleapis.com/css?family=Sancreek' rel='stylesheet'>
 {%endblock %}
 
 {% block content %}
 
-    
+<hr>
+
+<div class="header">
+  <h1 style="text-align: center;font-family:'Sancreek';font-size: 70px ; padding-top: 150px; background-image: url('https://bit.ly/2A9kx16');background-size: cover;height: 500px;">The Awwwards </h1>
+</div>
+
 
 
 
@@ -25,4 +34,8 @@
 
 
 
+{% endblock %}
+<!--End of the block content-->
+{% block scripts %} {{block.super}}
+  <script type="text/javascript" src="{%static 'js/awardletter.js'%}"></script>
 {% endblock %}
