--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-inverse" style="background-color:#EB8258">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="{% url 'awards' %}" style="font-size: 40px; text-align: center;">The Awwwards</a>
+        <a class="navbar-brand" href="{% url 'awards' %}" style="font-size: 40px; text-align: center;color: blue;">The Awwwards</a>
       </div>
      
       <div class="col-sm-6 col-md-6" style="text-align: right;">
@@ -53,7 +53,7 @@
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search Post" name="post">
             <div class="input-group-btn">
-              <button type="submit" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+              <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
               
             </div>
           </div>
