--- a/award/templates/all-awards/main.html
+++ b/award/templates/all-awards/main.html
@@ -28,10 +28,22 @@
 
 
 
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"> </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.1.3/circle-progress.min.js"></script>
 
+<!-- Looping through news end   -->
+<div class="container-fluid">
+
+  <form  action="{%url 'awards'%}" method="post">
+    {%csrf_token%}
+
+    {% bootstrap_form letterForm layout='inline' %}
+    <input type="submit" value="Subscribe">
+  </form>
+
+</div>
 
 
 {% endblock %}
