--- a/award/templates/all-awards/post.html
+++ b/award/templates/all-awards/post.html
@@ -12,6 +12,18 @@
      <h1 class="text-center">{{post.title}}</h1>
    </div>
 
+   <div class="container-fluid">
+
+    <form  action="{%url 'post'%}" method="post">
+      {%csrf_token%}
+  
+      {% bootstrap_form letterForm layout='inline' %}
+      <input type="submit" value="Subscribe">
+    </form>
+  
+  </div>
+  
+
    <div class="row">
     {% autoescape on %}
     {{post.post| safe}}
