--- a/award/templates/all-awards/search.html
+++ b/award/templates/all-awards/search.html
@@ -1,6 +1,6 @@
 {%extends 'all-awards/base.html'%} 
 {% block content %}
-<div class="container">
+<div class="container-search">
 
   <div class="row">
     {% if posts%}
