--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -27,6 +27,9 @@
               <li>
                 <a href="{%url 'new-post'%}">Create Post</a>
               </li>
+              <li>
+                <a href="{%url 'profile'%}">Create Post</a>
+              </li>
 
               <li>
 
