--- a/award/templates/all-awards/major.html
+++ b/award/templates/all-awards/major.html
@@ -18,7 +18,7 @@
   
     {% empty %}
     <div class="row">
-      <h2 class="text-center">There No News Items</h2>
+      <h2 class="text-center">There No Posted</h2>
     </div>
     {% endfor %}
   
